--- a/cart.html
+++ b/cart.html
@@ -107,7 +107,7 @@ simpleCart.bind('beforeCheckout', function(data) {
 							</div>
 						</form>
 				</div>
-				<div class="grid2-6">
+				<div class="grid4">
 					<a href="javascript:;" class="simpleCart_checkout button-huge">Checkout</a>
 				</div>
 		</div>
