Checkout page improved

--- a/index.html
+++ b/index.html
@@ -611,6 +611,7 @@ simpleCart({
 										<td><a class="item_add" href="javascript:;"> Add to Cart </a></td>
 									</tr>
 								</table>
+								<a href="index.html#sizes">Find out your Wellfitting size now!</a>
 							</div>
 							<div class="singleItemThumbs">
 								<img src="{{bra.small-thumb-1}}" class="grid1-6">
