--- a/cart.html
+++ b/cart.html
@@ -58,6 +58,36 @@ simpleCart.bind('beforeCheckout', function(data) {
 });
 
 	</script>
+
+	
+<script type="text/javascript">	
+// A jQuery based placeholder polyfill
+$(document).ready(function(){
+  function add() {
+    if($(this).val() === ''){
+      $(this).val($(this).attr('placeholder')).addClass('placeholder');
+    }
+  }
+
+  function remove() {
+    if($(this).val() === $(this).attr('placeholder')){
+      $(this).val('').removeClass('placeholder');
+    }
+  }
+
+  // Create a dummy element for feature detection
+  if (!('placeholder' in $('<input>')[0])) {
+
+    // Select the elements that have a placeholder attribute
+    $('input[placeholder], textarea[placeholder]').blur(add).focus(remove).each(add);
+
+    // Remove the placeholder text before the form is submitted
+    $('form').submit(function(){
+      $(this).find('input[placeholder], textarea[placeholder]').each(remove);
+    });
+  }
+});
+</script>
 </head>
 
 <body>
@@ -69,12 +99,12 @@ simpleCart.bind('beforeCheckout', function(data) {
 				<h1>Your<img src="/img/css/logo.png" width="260px"> Bag:</h1>
 				<div class="simpleCart_items"></div>
 				<h3 class="total">Total: <span class="simpleCart_total"></span></h3>
-				<a href="index.html#mainGallery" class="button-huge">Continue Shopping</a>
+				<a href="index.html#mainGallery" class="button-huge">Continue Shopping...</a>
 			</div>
 	</section>
 	
 	<section id="clientInfo" class="grid4">
-		<header><h1>Tell us where to deliver!</h1></header>
+		<header><h1>... or Tell Us Where to Deliver!</h1></header>
 		<div class="inner">
 			
 				<div id="clientName" class="grid2-6">
