dropdown countries on shopping cart

--- a/index.html
+++ b/index.html
@@ -752,12 +752,12 @@ $(document).ready(function(){
 			<header>
 				<h2>Accepting orders only until September 30 2013!</h2>
 				<h1>Order Your Bras Today!</h1>
-				<!-- <button class="button-huge orderNow">
-					<div>Buy Now
+				<button class="button-huge orderNow">
+					<div>Shop Now
 						<br>
 						<small>&hearts; 100% Satisfaction Guaranteed &hearts;</small>
 					</div>
-				</button> -->
+				</button> 
 				<div id="orderForm">
 					<h1>Order your Wellfitting Bras Today!</h1>
 					<div class="grid2">
