added item thumbnails to cart view

--- a/cart.html
+++ b/cart.html
@@ -23,7 +23,7 @@ $(document).ready(function(){
 //Initialize simpleCart.js
 simpleCart({
 		cartColumns: [
-			{ attr: "thumb", label: "Thumb"},
+			{ view: "image", attr: "thumb", label: false},
 			{ attr: "name", label: "Name"},
 			{ attr: "size", label: "Size"},
 			{ view: "currency", attr: "price", label: "Price/Item"},
