Buttons & table on shopping Cart page improved

--- a/cart.html
+++ b/cart.html
@@ -97,14 +97,19 @@ $(document).ready(function(){
 			<div class="inner">
 				
 				<h1>Your<img src="/img/css/logo.png" width="260px"> Bag:</h1>
-				<div class="simpleCart_items"></div>
-				<h3 class="total">Total: <span class="simpleCart_total"></span></h3>
-				<a href="index.html#mainGallery" class="button-huge">Continue Shopping...</a>
+				<div class="simpleCart_items grid4"></div>
+				<h3 class="total grid4">Total: <span class="simpleCart_total"></span></h3>
+				<div class="continueShopping grid4">
+					<a href="index.html#mainGallery">Continue Shopping ￫</a>
+				</div>
+				<div>
+					<a href="#contactInfo" class="button-huge">Check Out, Please</a>
+				</div>
 			</div>
 	</section>
 	
 	<section id="clientInfo" class="grid4">
-		<header><h1>... or Tell Us Where to Deliver!</h1></header>
+		<header><h1>Tell Us Where to Deliver!</h1></header>
 		<div class="inner">
 			
 				<div id="clientName" class="grid2-6">
