--- a/index.html
+++ b/index.html
@@ -265,6 +265,14 @@ $(document).ready(function(){
 				return $(document).height();
 			});
 			$('#overlay').fadeIn();
+			//set findOutSize link to hide modal and scroll to #sizes
+			var findOutSize = $('#modal .findOutSize');
+			$(findOutSize).click(function(){
+				event.preventDefault;
+				$('#overlay').fadeOut();
+				$('#modal').fadeOut();
+				scrollToTarget($(this), $('#sizes'));
+			});
 		});
 		$('#closeModal').click(function(){
 			$('#overlay').fadeOut();
@@ -337,7 +345,7 @@ $(document).ready(function(){
 		scrollToTarget(anchor,target);
 	});
 
-//Scroll to element on click
+//Scroll to #mainGallery when ShopNow button clicked
 	scrollToTarget($('.shopNow'), $('#mainGallery'));
 
 //Sticky navigation function 
@@ -644,7 +652,7 @@ $(document).ready(function(){
 										<td><a class="item_add" href="javascript:;"> Add to Cart </a></td>
 									</tr>
 								</table>
-								<a href="#" class="findOutSize">Find out your Wellfitting size now!</a>
+								<a href="#sizes" class="findOutSize">Find out your Wellfitting size now!</a>
 							</div>
 							<div class="singleItemThumbs">
 								<img src="{{bra.small-thumb-1}}" class="grid1-6">
@@ -761,31 +769,6 @@ $(document).ready(function(){
 						<small>&hearts; 100% Satisfaction Guaranteed &hearts;</small>
 					</div>
 				</button>				
-				<div id="orderForm">
-					<h1>Order your Wellfitting Bras Today!</h1>
-					<div class="grid2">
-						<h2>Let us know which bras you would like to order:</h2>
-						<ul class="orderGallery">
-							{% for bra in site.posts %}
-							<li>
-								<img src="{{bra.main-thumb}}" class="miniThumb">
-								<div class="caption">
-									<h3>{{bra.title}}</h3>
-									Bra: ${{bra.bra-price}}<br>
-									Bottoms: ${{bra.bottoms-price}}
-								</div>
-							</li>
-							{% endfor %}
-						</ul>
-						
-						<img src="https://www.paypalobjects.com/webstatic/mktg/logo/AM_mc_vs_dc_ae.jpg" border="0" alt="PayPal Acceptance Mark"></a>
-
-					</div> 
-					<div class="grid2">
-						<iframe id="orderIframe" name="iframe1" src="https://docs.google.com/forms/d/1sJCBs4w3WTIDbmZbbHEj3vXVYvpxtfwOeuhW9Dsnq0Y/viewform?embedded=true" width="460" height="1075" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-					</div>
-				</div>
->>>>>>> 56e6d2b514b8663097b93f458948e88f537b313e
 			</header>
 			<div class="inner">
 				<div class="grid2-6">
