--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@ $(document).ready(function(){
 					</div>
 
 				</button>				
-
+			</header>	
 			<div class="inner">
 				<div class="grid2-6">
 					<span class="icon shipping"></span>
