Bag styled, icon added

--- a/cart.html
+++ b/cart.html
@@ -103,7 +103,7 @@ $(document).ready(function(){
 					<a href="index.html#mainGallery">Continue Shopping ￫</a>
 				</div>
 				<div>
-					<a href="#clientInfo" class="button-huge">Check Out, Please</a>
+					<a href="#clientInfo" class="button-huge">Ready to Check Out?</a>
 				</div>
 			</div>
 	</section>
