--- a/index.html
+++ b/index.html
@@ -628,12 +628,11 @@ $(document).ready(function(){
 				</div>
 			</nav>
 			<div id="shoppingCart">
-				<h3 id="cartDetails"><span class="cartHeader"></span> | <a>checkout&raquo;</a></h3>
+				<div id="bagIcon"></div>
+				<h3 id="cartDetails"><span class="cartHeader"></span> <br><a href="/cart.html">Checkout&raquo;</a></h3>
 				<div class="cartPreview">
 					<div class="simpleCart_items"></div>			
-					<div class="cartControls">
-						<a href="/cart.html">Checkout</a>
-					</div>
+					
 				</div>
 			</div>		
 		</div>
