added "remove" to shopping cart peview

--- a/index.html
+++ b/index.html
@@ -506,8 +506,8 @@ $(document).ready(function(){
 	        /*{ view: "currency", attr: "price", label: "Price"},
 	        { view: "decrement", label: false},
 	        { view: "increment", label: false},
-	        { view: "currency", attr: "total", label: "SubTotal" },
-	        { view: "remove", text: "Remove", label: true}*/
+	        { view: "currency", attr: "total", label: "SubTotal" },*/
+	        { view: "remove", text: "Remove", label: true},
 	    ],
 	    cartStyle: "table", 
 	    checkout: {
