--- a/index.html
+++ b/index.html
@@ -910,13 +910,13 @@ $(document).ready(function(){
 					<h2 class="nodisplay">Spectacular Uplift in Over 65 Sizes!</h2>
 					<img src="img/css/spectacular-uplift.png">
 				</div>
-				<div class="grid1 square julietteMore">
-					<img src="img/36f-review.jpg">
+				<div class="grid1 square panteraMore">
+					<img src="img/65h-review.jpg">
 					<div class="caption">
-						<h2>80F</h2>
+						<h2>65H</h2>
 						<p>
-							underbust: 31in <br>
-							overbust: 40in
+							underbust: 26in <br>
+							overbust: 35¾in
 						</p>
 					</div>
 				</div>
@@ -938,18 +938,18 @@ $(document).ready(function(){
 					<div class="caption">
 						<h2>65E</h2>
 						<p>
-							underbust: 26½in <br>
+							underbust: 25in <br>
 							overbust: 35¾in
 						</p>
 					</div>
 				</div>
-				<div class="grid1 square julietteMore">
-					<img src="img/34ff-review.jpg">
+				<div class="grid1 square tropicalGardenMore">
+					<img src="img/75f-review.jpg">
 					<div class="caption">
-						<h2>75G</h2>
+						<h2>75F</h2>
 						<p>
-							underbust: 30in <br>
-							overbust: 39in
+							underbust: 30¼in <br>
+							overbust: 40in
 						</p>
 					</div>
 				</div>
@@ -958,7 +958,7 @@ $(document).ready(function(){
 					<div class="caption">
 						<h2>70H</h2>
 						<p>
-							underbust: 28in <br>
+							underbust: 30in <br>
 							overbust: 38¼in
 						</p>
 					</div>
