--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@ $(document).ready(function(){
 
 	//Launch modals on anchor clicks
 	$.each( {
+		'.panteraMore': "#panteraText",
 		'.tropicalGardenMore': "#tropicalGardenText",
 		'.lycheeSorbetMore': '#lycheeSorbetText',
 		'.summerTimeMore': '#summerTimeText',
