added credit card details form to cart

--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@ $(document).ready(function(){
 
 	//Launch modals on anchor clicks
 	$.each( {
-		'.panteraMore': "#panteraText",
-		'.tropicalGardenMore': "#tropicalGardenText",
+		'.panteraMore': '#panteraText',
+		'.tropicalGardenMore': '#tropicalGardenText',
 		'.lycheeSorbetMore': '#lycheeSorbetText',
 		'.summerTimeMore': '#summerTimeText',
 		'.freeTimeMore': '#freeTimeText',
@@ -792,8 +792,6 @@ $(document).ready(function(){
 
 			<div id="calculateSizeSection" class="grid4">
 				<div class="inner">
-					
-					
 					<div class="grid3">
 						<div id="sizeTable">
 							<i>Our sizes are based on European sizing system. Highlight a size to see exact measurements!</i>
@@ -908,13 +906,13 @@ $(document).ready(function(){
 					<h2 class="nodisplay">Spectacular Uplift in Over 65 Sizes!</h2>
 					<img src="img/css/spectacular-uplift.png">
 				</div>
-				<div class="grid1 square panteraMore">
-					<img src="img/65h-review.jpg">
+				<div class="grid1 square julietteMore">
+					<img src="img/36f-review.jpg">
 					<div class="caption">
-						<h2>65H</h2>
+						<h2>80F</h2>
 						<p>
-							underbust: 26in <br>
-							overbust: 35¾in
+							underbust: 31in <br>
+							overbust: 40in
 						</p>
 					</div>
 				</div>
@@ -936,18 +934,18 @@ $(document).ready(function(){
 					<div class="caption">
 						<h2>65E</h2>
 						<p>
-							underbust: 25in <br>
+							underbust: 26½in <br>
 							overbust: 35¾in
 						</p>
 					</div>
 				</div>
-				<div class="grid1 square tropicalGardenMore">
-					<img src="img/75f-review.jpg">
+				<div class="grid1 square julietteMore">
+					<img src="img/34ff-review.jpg">
 					<div class="caption">
-						<h2>75F</h2>
+						<h2>75G</h2>
 						<p>
-							underbust: 30¼in <br>
-							overbust: 40in
+							underbust: 30in <br>
+							overbust: 39in
 						</p>
 					</div>
 				</div>
@@ -956,7 +954,7 @@ $(document).ready(function(){
 					<div class="caption">
 						<h2>70H</h2>
 						<p>
-							underbust: 30in <br>
+							underbust: 28in <br>
 							overbust: 38¼in
 						</p>
 					</div>
