--- a/index.html
+++ b/index.html
@@ -895,8 +895,7 @@ $(document).ready(function(){
 				</div>
 			</div>
 		</section>
-
-		<section class="grid4" id="realphotos">
+<section class="grid4" id="realphotos">
 			<header>
 				<h2>Amazing fit for the curvy & fabulous.</h2>
 				<h1>As Seen on Real Women!</h1>
@@ -906,13 +905,13 @@ $(document).ready(function(){
 					<h2 class="nodisplay">Spectacular Uplift in Over 65 Sizes!</h2>
 					<img src="img/css/spectacular-uplift.png">
 				</div>
-				<div class="grid1 square julietteMore">
-					<img src="img/36f-review.jpg">
+				<div class="grid1 square panteraMore">
+					<img src="img/65h-review.jpg">
 					<div class="caption">
-						<h2>80F</h2>
+						<h2>65H</h2>
 						<p>
-							underbust: 31in <br>
-							overbust: 40in
+							underbust: 27in <br>
+							overbust: 36in
 						</p>
 					</div>
 				</div>
@@ -939,13 +938,13 @@ $(document).ready(function(){
 						</p>
 					</div>
 				</div>
-				<div class="grid1 square julietteMore">
-					<img src="img/34ff-review.jpg">
+				<div class="grid1 square tropicalGardeneMore">
+					<img src="img/75f-review.jpg">
 					<div class="caption">
-						<h2>75G</h2>
+						<h2>75F</h2>
 						<p>
-							underbust: 30in <br>
-							overbust: 39in
+							underbust: 30½in <br>
+							overbust: 40in
 						</p>
 					</div>
 				</div>
@@ -975,6 +974,7 @@ $(document).ready(function(){
 				</div>
 			</div>
 		</section>
+
 
 
 
